--- a/lib/gits_web/components/layouts/host_panel.html.heex
+++ b/lib/gits_web/components/layouts/host_panel.html.heex
@@ -10,7 +10,7 @@
       </button>
     </div>
   </header>
-  <main class="bg-white gap-8 w-full grid">
+  <main class="bg-white lg:gap-8 gap-6 w-full grid">
     <%= @inner_content %>
   </main>
 </div>
