--- a/lib/gits_web/live/host_live/onboarding.html.heex
+++ b/lib/gits_web/live/host_live/onboarding.html.heex
@@ -1,7 +1,7 @@
 <div class="w-full max-w-screen-sm">
   <h1 class="text-2xl font-semibold">Create a host account</h1>
   <p class="mt-4 text-zinc-500">
-    A host account will make it easy to manage events, venues, your team and everything else to make you a successful host
+    A host account will make it easy to manage events, venues and everything else to make you a successful host
   </p>
   <.form :let={f} for={@form} phx-submit="save">
     <div class="grid grid-cols-[auto_1fr] mt-8 items-center gap-1 gap-x-4">
@@ -30,19 +30,10 @@
       </div>
     </div>
 
-    <label class="col-span-full grid gap-1 mt-8">
-      <span class="text-sm font-medium">Host name</span>
-      <input
-        name={f[:name].name}
-        value={f[:name].value}
-        type="text"
-        class="w-full rounded-lg border-zinc-300 px-3 py-2 text-sm"
-      />
-    </label>
-    <div class="mt-8">
-      <button class="h-9 rounded-lg px-4 py-2 text-sm font-semibold bg-zinc-950 text-zinc-50">
-        Continue
-      </button>
-    </div>
+    <.input field={f[:name]} label="Host name" class="mt-8 col-span-full" />
+
+    <.button class="mt-8">
+      Continue
+    </.button>
   </.form>
 </div>
