--- a/lib/gits_web/live/my_live/settings.html.heex
+++ b/lib/gits_web/live/my_live/settings.html.heex
@@ -19,7 +19,7 @@
       <div class="size-28 rounded-full bg-zinc-200"></div>
       <div class="grid gap-1">
         <span class="text-3xl font-semibold">
-          <%= @current_user.display_name || "Unknown" %>
+          <%= @current_user.name || "Unknown" %>
         </span>
         <span class="text-sm text-zinc-500"><%= @current_user.email %></span>
       </div>
