fix: update comment for clarity in settings.html.heex
- simplified comment in `settings.html.heex` for better clarity.
- ensures users understand the visibility of the information.

--- a/lib/gits_web/live/host_live/settings.html.heex
+++ b/lib/gits_web/live/host_live/settings.html.heex
@@ -49,7 +49,7 @@
   <div class="p-2">
     <h2 class="text-xl font-semibold">Create payout reciptient</h2>
     <p class="mt-1 text-sm leading-6 text-gray-600">
-      <!-- This information will be displayed publicly. -->
+      <!-- This displayed publicly. -->
     </p>
 
     <.form
