feat: add event category and summary components
- introduce `gits.storefront.eventcategory` for event types
- implement `input` function for radio button selection in `corecomponents`
- create `summary` template for event details in `edit_event_templates`
- update routing to include new summary edit path
- refactor event visibility input to use a more concise format

--- a/lib/gits_web/live/host_live/edit_event.html.heex
+++ b/lib/gits_web/live/host_live/edit_event.html.heex
@@ -12,7 +12,7 @@
       {label, action} <- [
         {"Event Details", :details},
         {"Tickets", :tickets},
-        {"Payouts", :payouts}
+        {"Summary", :summary}
       ]
     }
     class="group grid w-full rounded-lg"
@@ -43,13 +43,8 @@
       show_archive_ticket_modal={@show_archive_ticket_modal}
     />
 
-    <.payout_preferences
-      :if={@live_action == :payouts}
-      form={@form}
-      new_recipient_path={
-        Routes.host_settings_path(@socket, :payouts_create_recipient, @host.handle)
-      }
-    />
+    <.summary :if={@live_action == :summary} />
+
     <div class="flex gap-6 mt-8">
       <.button
         disabled={@live_action == :details}
@@ -64,12 +59,20 @@
         </span>
       </.button>
 
-      <.button phx-click="next" type="button" variant={:subtle}>
-        <span class="">
-          Next
-        </span>
-        <.icon name="i-lucide-chevron-right" />
-      </.button>
+      <%= if @live_action == :summary do %>
+        <.button phx-click={JS.dispatch("gits:go_back")} type="button" variant={:surface}>
+          <span class="">
+            Done
+          </span>
+        </.button>
+      <% else %>
+        <.button phx-click="next" type="button" variant={:subtle}>
+          <span class="">
+            Next
+          </span>
+          <.icon name="i-lucide-chevron-right" />
+        </.button>
+      <% end %>
     </div>
   </div>
 </div>
